fix:调整侧边栏样式，将z-index从1001改为1000。

--- a/alinesno-infra-smart-expert-ui/src/assets/styles/sidebar.scss
+++ b/alinesno-infra-smart-expert-ui/src/assets/styles/sidebar.scss
@@ -23,7 +23,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 1001;
+    z-index: 1000;
     overflow: hidden;
     border-right: 1px solid #e6e6e6;
     margin-top: $base-topheader-height ; 
